Copy of last project as a start

--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,8 @@ dist
 # DynamoDB Local files
 .dynamodb/
 
+.DS_Store
+
 # TernJS port file
 .tern-port
 © 2020 GitHub, Inc.
@@ -120,3 +122,6 @@ API
 Training
 Blog
 About
+
+# NodeModules file
+./node_modules
