--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "se5-project-backend",
+  "name": "swe4-project-3-backend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "bundle": "mkdir deploy && cp -r app server.js package.json package-lock.json project3-backend.service .env deploy"
   },
   "dependencies": {
-    "body-parser": "^1.20.1",
+    "body": "^5.1.0",
+    "body-parser": "^1.20.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "csv": "^6.2.2",
+    "csv-parse": "^5.3.2",
     "debug": "~2.6.9",
-    "express": "^4.18.2",
+    "dotenv": "^16.0.3",
+    "express": "~4.16.1",
+    "googleapis": "^109.0.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
+    "mariadb": "^2.4.2",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "pug": "^3.0.2"
+    "pug": "^2.0.0-beta11",
+    "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
