--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "swe5-project-backend",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-    "bundle": "mkdir deploy && cp -r app server.js package.json package-lock.json performance-t3-backend.service .env deploy"
+  "scripts": {    
+    "start": "node app.js",
+    "bundle": "mkdir deploy && cp -r config controllers models routes filehandling app.js package.json package-lock.json performance-t3-backend.service deploy && rm deploy/config/db.config.js && mv deploy/config/prod.db.config.js deploy/config/db.config.js"
   },
   "dependencies": {
     "body": "^5.1.0",
