--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {    
     "start": "node app.js",
-    "bundle": "mkdir deploy && cp -r config controllers models routes filehandling app.js package.json package-lock.json performance-t3-backend.service deploy && rm deploy/config/db.config.js && mv deploy/config/prod.db.config.js deploy/config/db.config.js"
+    "bundle": "mkdir deploy && cp -r authorization config controllers filehandling models routes app.js package.json package-lock.json performance-t3-backend.service deploy && rm deploy/config/db.config.js && mv deploy/config/prod.db.config.js deploy/config/db.config.js"
   },
   "dependencies": {
     "body": "^5.1.0",
