--- a/.github/workflows/node-deploy.yml
+++ b/.github/workflows/node-deploy.yml
@@ -23,6 +23,8 @@ jobs:
           ref: dev
       - uses: actions/setup-node@v3
       - run: npm install
+        with:
+          node-version: 16
 
       - run: |
           touch .env
