--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bundle": "mkdir deploy && cp -r authorization config controllers models routes utils app.js package.json package-lock.json performance-t3-backend.service .env deploy && rm deploy/config/db.config.js && mv deploy/config/prod.db.config.js deploy/config/db.config.js"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "body": "^5.1.0",
     "body-parser": "^1.20.0",
     "cookie-parser": "~1.4.4",
@@ -16,13 +17,14 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "googleapis": "^118.0.0",
+    "googleapis": "^105.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "mariadb": "^3.1.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.1",
     "pug": "^3.0.2",
     "sequelize": "^6.3.5"
   },
